MVC plants list

--- a/app/src/main/res/layout/activity_new_plant.xml
+++ b/app/src/main/res/layout/activity_new_plant.xml
@@ -27,7 +27,8 @@
             android:id="@+id/plant_days_between_watering"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="days between watering" />
+            android:hint="days between watering"
+            android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
